2005-05-16  Rob Savoye  <rob@bertha.welcomehome.org>

	* base/utility.cpp (dump_memory_stats): Disable for now by exiting
	before right away..
	* gameswf/gameswf_xmlsocket.h: Add char ** parameter to anydata().
	* gameswf/gameswf_xmlsocket.cpp: Add char ** parameter to
	anydata(). Call malloc_trim() to release memory back to the
	system so we don't eat up all the memory. 
	(anydata) Use char * rather than tu_strings for the buffering so
	we can track every byte. Parse looking for the nll. delimiter
	between messages. Setup single messages faster than processing
	multiple messages.
	* gameswf/gameswf_xml.cpp: Delete name and value too. Use char *
	rather than tu_strings for the attribute name and value.
	
	* base/utility.{cpp,h}: Add dump_memory_stats() to dump the
	internal statistics from malloc so we can track memory allocations
	in great detail.

2005-05-14  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_action.cpp: Print the address of the object for
	get_variable and get_member so we can trace through the object
	dependancies.
	* geometry/Makefile.in: Add -I.. to INCLUDES so config.h can be
	found.
	* gameswf/gameswf_xml.cpp: Call xmlCleanupParser() after freeing
	the Doc pointer.
	* base/{container.h, image.cpp, ogl.cpp, tu_file.cpp}: Add support
	for optionally using dmalloc for debugging memory problems.
	* gameswf/{gameswf_action.cpp, gameswf_font.cpp,
	gameswf_fontlib.cpp, gameswf_impl.cpp, gameswf_movie.cpp,
	gameswf_string.cpp, gameswf_xml.cpp, gameswf_xmlsocket.cpp}: Add
	support for optionally using dmalloc for debugging memory
	problems.
	* geometry/bsp.cpp:  Add support for optionally using dmalloc for
	debugging memory problems.
	* configure.ac: Add --enable-dmalloc option. Display all config
	options at the end.
	* configure, config.h.in: Regenerated.
	* gameswf/Makefile.in: Link in libdmallocxx if --enable-dmalloc is
	passed to configure.

2005-05-09  Rob Savoye  <rob@bertha.welcomehome.org>
